adjust arquitecture hexagonal, it is working correctly