@@ -1,17 +1,17 @@
 package com.proyect.bankaccount.infraestructure.repositories;
 
-import com.proyect.bankaccount.domain.model.Client;
-import com.proyect.bankaccount.domain.model.client.ClientAccount;
 import com.proyect.bankaccount.domain.ports.out.ClientRepositoryPort;
 import com.proyect.bankaccount.infraestructure.entities.AccountEntity;
 import com.proyect.bankaccount.infraestructure.entities.ClientEntity;
 import com.proyect.bankaccount.infraestructure.entities.TransactionEntity;
+import com.proyect.bankaccount.domain.model.client.Client;
 import com.proyect.bankaccount.infraestructure.mapper.IClientMapperEntityDomain;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class JpaClientRepositoryAdapter implements ClientRepositoryPort {
@@ -43,72 +43,20 @@ public class JpaClientRepositoryAdapter implements ClientRepositoryPort {
     @Override
     public List<Client> findAll() {
         List<ClientEntity> findAllClient = jpaClientRepository.findAll();
-
-        // Clonar la lista sin modificar la original
-        List<ClientEntity> processedClients = findAllClient.stream()
-                .map(clientEntity -> {
-                    List<AccountEntity> accounts = clientEntity.getAccount().stream()
-                            .map(account -> {
-                                List<TransactionEntity> transactions = account.getTransactions().stream()
-                                        .map(transaction -> new TransactionEntity(
-                                                transaction.getId(),
-                                                transaction.getTransactionType(),
-                                                transaction.getAmount(),
-                                                transaction.getTransactionDate(),
-                                                transaction.getDescription(),
-                                                null // <- Volver null la cuenta en cada transacción
-                                        ))
-                                        .toList();
-
-                                AccountEntity accountCopy = new AccountEntity(
-                                        account.getId(),
-                                        account.getAccountNumber(),
-                                        account.getAccountType(),
-                                        account.getBalance(),
-                                        account.getCreatedAt(),
-                                        null, // <- Volver null al cliente
-                                        transactions
-                                );
-                                return accountCopy;
-                            })
-                            .toList();
-
-                    ClientEntity clientCopy = new ClientEntity(
-                            clientEntity.getId(),
-                            clientEntity.getName(),
-                            clientEntity.getEmail(),
-                            clientEntity.getPhone(),
-                            clientEntity.getIdentificationNumber(),
-                            clientEntity.getCreatedAt(),
-                            accounts
-                    );
-
-                    return clientCopy;
-                })
-                .toList();
-
-        List<ClientAccount> clientAccount = processedClients.stream()
-                .map(clientMapperEntityDomaintMapper::toClientAccount)
-                .toList();
-
-        List<Client> client = clientAccount.stream()
-                .map(clientMapperEntityDomaintMapper::clientAccountToClient)
-                .toList();
-
-        return client;
+        return findAllClient.stream()
+                .map(clientMapperEntityDomaintMapper::toClient)
+                .collect(Collectors.toList());
     }
 
     @Override
     public Optional<Client> findByIdentificationNumber(String identificationNumber) {
         Optional<ClientEntity> findClient = jpaClientRepository.findByIdentificationNumber(identificationNumber);
+        return findClient.map(clientMapperEntityDomaintMapper::toClient);
+    }
 
-        return findClient.map(clientEntity -> {
-            // 🔹 Rompe la referencia circular antes de mapear
-            if (clientEntity.getAccount() != null) {
-                clientEntity.getAccount().forEach(account -> account.setClient(null));
-            }
-
-            return clientMapperEntityDomaintMapper.toClient(clientEntity);
-        });
+    @Override
+    public Optional<Client> findByEmail(String email) {
+        Optional<ClientEntity> clientOptional = jpaClientRepository.findByEmail(email);
+        return clientOptional.map(clientMapperEntityDomaintMapper::toClient);
     }
 }
